// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OpenFoodFacts /> render correctly 1`] = `
<View
  style={
    {
      "alignContent": "center",
      "paddingHorizontal": 16,
      "paddingVertical": 28,
    }
  }
>
  <Text.Link
    center={true}
    url="https://world.openfoodfacts.org/"
  >
    Data from OPEN FOOD FACTS
  </Text.Link>
  <View
    style={
      {
        "flexDirection": "row",
        "maxHeight": 60,
        "paddingTop": 14,
      }
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`<OpenFoodFacts /> render nothing if bad data passed 1`] = `
<View
  style={
    {
      "alignContent": "center",
      "paddingHorizontal": 16,
      "paddingVertical": 28,
    }
  }
>
  <Text.Link
    center={true}
    url="https://world.openfoodfacts.org/"
  >
    Data from OPEN FOOD FACTS
  </Text.Link>
  <View
    style={
      {
        "flexDirection": "row",
        "maxHeight": 60,
        "paddingTop": 14,
      }
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`<OpenFoodFacts /> render nothing if no data passed 1`] = `
<View
  style={
    {
      "alignContent": "center",
      "paddingHorizontal": 16,
      "paddingVertical": 28,
    }
  }
>
  <Text.Link
    center={true}
    url="https://world.openfoodfacts.org/"
  >
    Data from OPEN FOOD FACTS
  </Text.Link>
  <View
    style={
      {
        "flexDirection": "row",
        "maxHeight": 60,
        "paddingTop": 14,
      }
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        resizeMode="contain"
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        resizeMode="contain"
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        resizeMode="contain"
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
  </View>
</View>
`;
